--- a/BulkyWebRazor/appsettings.json
+++ b/BulkyWebRazor/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=BRIAN\\SQLEXPRESS;Database=Bulky;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=BRIAN\\SQLEXPRESS;Database=Bulky_Razor;Trusted_Connection=True;TrustServerCertificate=True"
   }
 
 }
